// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders favorite 1`] = `
<li
  key="foo"
>
  <Tooltip
    mouseEnterDelay={1}
    overlay="foo"
    placement="left"
    visible={false}
  >
    <Link
      className="navbar-search-item-link"
      data-key="foo"
      onClick={[MockFunction]}
      onMouseEnter={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      <span
        className="navbar-search-item-icons little-spacer-right"
      >
        <FavoriteIcon
          favorite={true}
          size={12}
        />
        <QualifierIcon
          className="little-spacer-right"
          qualifier="TRK"
        />
      </span>
      <span
        className="navbar-search-item-match"
      >
        foo
      </span>
    </Link>
  </Tooltip>
</li>
`;

exports[`renders match 1`] = `
<li
  key="foo"
>
  <Tooltip
    mouseEnterDelay={1}
    overlay="foo"
    placement="left"
    visible={false}
  >
    <Link
      className="navbar-search-item-link"
      data-key="foo"
      onClick={[MockFunction]}
      onMouseEnter={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      <span
        className="navbar-search-item-icons little-spacer-right"
      >
        <QualifierIcon
          className="little-spacer-right"
          qualifier="TRK"
        />
      </span>
      <span
        className="navbar-search-item-match"
        dangerouslySetInnerHTML={
          Object {
            "__html": "f<mark>o</mark>o",
          }
        }
      />
    </Link>
  </Tooltip>
</li>
`;

exports[`renders organizations 1`] = `
<li
  key="foo"
>
  <Tooltip
    mouseEnterDelay={1}
    overlay="foo"
    placement="left"
    visible={false}
  >
    <Link
      className="navbar-search-item-link"
      data-key="foo"
      onClick={[MockFunction]}
      onMouseEnter={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      <span
        className="navbar-search-item-icons little-spacer-right"
      >
        <ClockIcon
          size={12}
        />
        <QualifierIcon
          className="little-spacer-right"
          qualifier="TRK"
        />
      </span>
      <span
        className="navbar-search-item-match"
      >
        foo
      </span>
      <div
        className="navbar-search-item-right text-muted-2"
      >
        bar
      </div>
    </Link>
  </Tooltip>
</li>
`;

exports[`renders organizations 2`] = `
<li
  key="foo"
>
  <Tooltip
    mouseEnterDelay={1}
    overlay="foo"
    placement="left"
    visible={false}
  >
    <Link
      className="navbar-search-item-link"
      data-key="foo"
      onClick={[MockFunction]}
      onMouseEnter={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      <span
        className="navbar-search-item-icons little-spacer-right"
      >
        <ClockIcon
          size={12}
        />
        <QualifierIcon
          className="little-spacer-right"
          qualifier="TRK"
        />
      </span>
      <span
        className="navbar-search-item-match"
      >
        foo
      </span>
    </Link>
  </Tooltip>
</li>
`;

exports[`renders projects 1`] = `
<li
  key="qwe"
>
  <Tooltip
    mouseEnterDelay={1}
    overlay="qwe"
    placement="left"
    visible={false}
  >
    <Link
      className="navbar-search-item-link"
      data-key="qwe"
      onClick={[MockFunction]}
      onMouseEnter={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "qwe",
          },
        }
      }
    >
      <span
        className="navbar-search-item-icons little-spacer-right"
      >
        <ClockIcon
          size={12}
        />
        <QualifierIcon
          className="little-spacer-right"
          qualifier="BRC"
        />
      </span>
      <span
        className="navbar-search-item-match"
      >
        qwe
      </span>
      <div
        className="navbar-search-item-right text-muted-2"
      >
        foo
      </div>
    </Link>
  </Tooltip>
</li>
`;

exports[`renders recently browsed 1`] = `
<li
  key="foo"
>
  <Tooltip
    mouseEnterDelay={1}
    overlay="foo"
    placement="left"
    visible={false}
  >
    <Link
      className="navbar-search-item-link"
      data-key="foo"
      onClick={[MockFunction]}
      onMouseEnter={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      <span
        className="navbar-search-item-icons little-spacer-right"
      >
        <ClockIcon
          size={12}
        />
        <QualifierIcon
          className="little-spacer-right"
          qualifier="TRK"
        />
      </span>
      <span
        className="navbar-search-item-match"
      >
        foo
      </span>
    </Link>
  </Tooltip>
</li>
`;

exports[`renders selected 1`] = `
<li
  key="foo"
>
  <Tooltip
    mouseEnterDelay={1}
    overlay="foo"
    placement="left"
    visible={false}
  >
    <Link
      className="navbar-search-item-link"
      data-key="foo"
      onClick={[MockFunction]}
      onMouseEnter={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      <span
        className="navbar-search-item-icons little-spacer-right"
      >
        <QualifierIcon
          className="little-spacer-right"
          qualifier="TRK"
        />
      </span>
      <span
        className="navbar-search-item-match"
      >
        foo
      </span>
    </Link>
  </Tooltip>
</li>
`;

exports[`renders selected 2`] = `
<li
  className="active"
  key="foo"
>
  <Tooltip
    mouseEnterDelay={1}
    overlay="foo"
    placement="left"
    visible={false}
  >
    <Link
      className="navbar-search-item-link"
      data-key="foo"
      onClick={[MockFunction]}
      onMouseEnter={[Function]}
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "foo",
          },
        }
      }
    >
      <span
        className="navbar-search-item-icons little-spacer-right"
      >
        <QualifierIcon
          className="little-spacer-right"
          qualifier="TRK"
        />
      </span>
      <span
        className="navbar-search-item-match"
      >
        foo
      </span>
    </Link>
  </Tooltip>
</li>
`;
